// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkup-config-service should throw an error if an invalid config is present and get is called 1`] = `
"Checkup configuration is malformed:
plugins expected type Array<string>, but got {}
tasks.someTask.0 expected type \\"on\\", but got \\"foo\\"
tasks.someTask.1 expected type \\"on\\", but got \\"foo\\"
tasks.someTask.2 expected type Array<(\\"on\\" | \\"on\\" | unknown)>, but got \\"foo\\""
`;

exports[`checkup-config-service should throw an error if an invalid config is present and write is called 1`] = `
"Checkup configuration is malformed:
plugins expected type Array<string>, but got {}
tasks.someTask.0 expected type \\"on\\", but got \\"foo\\"
tasks.someTask.1 expected type \\"on\\", but got \\"foo\\"
tasks.someTask.2 expected type Array<(\\"on\\" | \\"on\\" | unknown)>, but got \\"foo\\""
`;

exports[`checkup-config-service should write the config on calling write for JSON files 1`] = `
"{
  \\"plugins\\": [],
  \\"tasks\\": {}
}"
`;

exports[`checkup-config-service should write the config on calling write for JavaScript files 1`] = `
"module.exports = {
  \\"plugins\\": [],
  \\"tasks\\": {}
}"
`;
